--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.23.0",
     "react-switch": "^7.0.0",
-    "react-typical": "^0.1.3",
+    "react-type-animation": "^3.2.0",
+    "react-typed": "^2.0.12",
     "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
