--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@tsparticles/all": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.0",
     "react-switch": "^7.0.0",
     "react-type-animation": "^3.2.0",
